[package]
name = "xannuaire-dump"
version = "0.1.0"
edition = "2021"
description = "Retrieves data from the XAnnuaire into a csv file"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"

reqwest = { version = "0.11", features = ["blocking", "cookies"] }

scraper = "0.13"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
base64 = "0.13"

clap = "3.2"